# cpp-matching-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: MatchingEngine.h  Order.h  OrderBook.h  fmt_compat.h
src/: main.cpp
